update urls
